# Wakord

./: .gitattributes  .gitignore  CODE_REVIEW_FIX_PLAN.md  LICENSE  README.md  UV_USAGE.md  environment.yml  main.py  pyproject.toml  requirements-export.txt  requirements.txt  测试流程.md
.github/workflows/: ci.yml
configs/: config.example.yaml  config.yaml
examples/: control_service.py
models/: .gitkeep
src/wakeup/: __init__.py  _logging.py  cli.py  config.py  eval.py
src/wakeup/data/: __init__.py  _download.py  augment.py  features.py  negatives.py  oww_assets.py  recorder.py  tts_edge.py  tts_generator.py
src/wakeup/service/: __init__.py  audio.py  client.py  daemon.py  detector.py  protocol.py  server.py  vad.py  ws_client.py
src/wakeup/training/: __init__.py  dataset.py  export.py  model.py  pipeline.py  trainer.py
tests/: test_basic.py
