[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wakeup"
version = "0.1.0"
description = "本地中文语音唤醒词训练与常驻监听服务（唤醒词：小元）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "WakeUp Project" }]
dependencies = [
    "numpy<2",
    "scipy",
    "soundfile",
    "pyyaml",
    "tqdm",
    "sounddevice",
    "onnxruntime",
    "openwakeword",
    "websockets>=12",
]

[project.optional-dependencies]
runtime = ["numpy<2", "scipy", "soundfile", "pyyaml", "tqdm", "sounddevice", "onnxruntime", "openwakeword", "websockets>=12"]
train = ["torch", "sherpa-onnx", "onnxscript"]
vad = ["webrtcvad-wheels"]
edge = ["edge-tts"]
export = ["onnx>=1.16", "onnxsim", "onnx2tf", "onnx-graphsurgeon", "sng4onnx", "tf-keras", "tensorflow"]
dev = ["pytest", "websockets>=12"]
all = [
    "torch",
    "sherpa-onnx",
    "onnxscript",
    "webrtcvad-wheels",
    "edge-tts",
    "pytest",
    "websockets>=12",
]

[project.scripts]
wakeup = "wakeup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
